@@ -1,3 +1,2 @@
---add-modules java.xml.bind
 --add-opens java.base/java.lang=ALL-UNNAMED
 --add-opens java.base/sun.nio.ch=ALL-UNNAMED
